<resources>
    <string name="app_name">Jawahra</string>
    <string name="app_desc">With Jawarah, you can discover hidden gems that are scattered all around UAE! Easily learn about these places and their history.</string>

    <!--    NAVIGATION TITLES   -->
    <string name="title_home">Home</string>
    <string name="title_visit">Visit</string>
    <string name="title_news">News</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    SUB FRAGMENTS TITLES    -->
    <string name="subtitle_emirates">Emirates</string>
    <string name="subtitle_caption">Hidden Gems</string>

    <!--    EVENTS PAGE-->
    <string name="title_upcoming_places">Upcoming Places</string>
    <string name="title_upcoming_events">Upcoming Events</string>
    <string name="link_learn_more">Learn more...</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consequat, felis at accumsan accumsan, sapien mi lacinia quam, ac condimentum diam dui quis est. Pellentesque orci augue, pharetra varius aliquam nec, malesuada eget nisl. Proin lobortis tortor libero, ut porta magna tempus a. Nunc sit amet neque ipsum. Nulla suscipit tristique nibh, eu euismod augue eleifend semper. Nam molestie sit amet quam sed placerat. Aliquam ultrices scelerisque ante, semper congue orci volutpat at. Donec risus dui, molestie sit amet sem id, consectetur commodo velit. Vestibulum nibh elit, gravida ut pulvinar non, suscipit quis nisl. Nullam vitae sollicitudin lorem. Proin elit mi, lobortis suscipit mollis sit amet, tincidunt nec nibh. Aliquam sed ornare odio, id elementum orci. Donec consectetur lobortis elit, id gravida ex sagittis ut. Ut tincidunt lorem nibh, quis gravida nisl iaculis vitae. Duis sed egestas massa. Maecenas urna odio, tincidunt sed varius et, vehicula a lectus.</string>
    <string name="date_time_published"><![CDATA[Date & Time published]]></string>
    <string name="author">Author</string>
    <string name="emirate">Emirate</string>
    <string name="mark_event_to_calendar">Mark event to calendar</string>

    <!--  LOG IN/SIGN IN TITLES  -->

    <string name="title_welcome_message">Welcome!</string>
    <string name="title_welcome_back_message">Welcome back!</string>
    <string name="title_email">Email</string>
    <string name="title_pw">Password</string>
    <string name="title_confirm_pw">Confirm Password</string>
    <string name="title_user_name">Username</string>

    <string name="title_log_in">Log In</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_guest">Continue as Guest</string>
    <string name="title_new_user">New user? Create an account!</string>
    <string name="title_existing_user">Already have an account? Log in!</string>
    <string name="title_google_login">Sign in with Google</string>
    <string name="title_fb_login">Sign in with Facebook</string>

    <string name="facebook_app_id">911184903013374</string>
    <string name="fb_login_protocol_scheme">fb911184903013374</string>

    <!-- PROFILE -->
    <string name="title_settings">Settings</string>
    <string name="message_to_guest">Log in to bookmark and<br /> download your favorite places!</string>
    <string name="settings_change_pfp">Edit profile image</string>
    <string name="settings_policies">Privacy Policies</string>
    <string name="title_favorites">Favorites</string>

    <!--    PLACES DETAILS TITLES   -->
    <string name="title_about">About</string>
    <string name="title_images">Images</string>
    <string name="title_faqs">FAQs</string>

    <!--    ABOUT PAGE      -->
    <string name="subtitle_history">History</string>

    <!--    FAQs PAGE       -->
    <string name="subtitle_prices">Prices</string>
    <string name="subtitle_availability">Availability</string>
    <string name="subtitle_activities">Activities</string>
    <string name="subtitle_attire">What to wear</string>
    <string name="subtitle_website">Website</string>
    <string name="click_to_learn_more">Click to learn more</string>

    <!--    TEAM NAMES      -->
    <string name="name_proj_man">Anna Katreena Montero</string>
    <string name="name_software_arch">Kyla Jaycee Buarao</string>
    <string name="name_qa_test">Allelee Jaine Flores</string>
    <string name="name_bus_analyst">Kimberly Jewel Diaz</string>
    <string name="name_exp_design">Shayne Jeem Fajardo</string>
    <string name="name_dev">Akilah Antoinnette Lapure</string>

    <string name="role_proj_man">Project Manager</string>
    <string name="role_software_arch">Software Architect</string>
    <string name="role_qa_test">QA Tester</string>
    <string name="role_bus_analyst">Business Analyst</string>
    <string name="role_exp_design">Experience Designer</string>
    <string name="role_dev">Developer</string>

    <!--    COVID-19 PROTOCOLS   -->
    <string name="covProto">COVID-19 PROTOCOLS</string>
    <string name="covDesc">For your safety and concerns, we advise you to thoroughly read the following.</string>
    <string name="covBtn">I UNDERSTAND</string>

    <!--    ONBOARDING PAGE   -->
    <string name="onbIntro">Let\'s Get Started!</string>
    <string name="skip">SKIP</string>



</resources>