<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.visit.childfragments.FaqsChildFragment"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="@string/subtitle_prices"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faqs_prices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/quicksand"
            android:layout_marginVertical="10dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/subtitle_prices"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand"
            android:textSize="20sp"
            android:text="@string/subtitle_availability"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faqs_availability"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/quicksand"
            android:layout_marginVertical="10dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/subtitle_availability"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand"
            android:textSize="20sp"
            android:text="@string/subtitle_activities"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/faqs_activities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand"
            android:layout_marginVertical="10dp"
            android:lineSpacingExtra="8sp"
            android:textSize="18sp"
            android:text="@string/subtitle_activities"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand"
            android:textSize="20sp"
            android:text="@string/subtitle_attire"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/faqs_attire"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand"
            android:layout_marginVertical="10dp"
            android:lineSpacingExtra="8sp"
            android:textSize="18sp"
            android:text="@string/subtitle_attire"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand"
            android:textSize="20sp"
            android:text="@string/subtitle_website"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/faqs_website"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:autoLink="web"
            android:fontFamily="@font/quicksand"
            android:lineSpacingExtra="8sp"
            android:linksClickable="true"
            android:text="@string/subtitle_website"
            android:textColor="@color/black"
            android:textColorLink="@color/blue_dark"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>